--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta http-equiv='X-UA-Compatible' content='IE=edge' />
-<title>Hello World</title>
-
-<script id='sap-ui-bootstrap'
-    src='resources/sap-ui-core.js'
-    data-sap-ui-theme='sap_bluecrystal'
-    data-sap-ui-libs='sap.ui.commons'>
-</script>
-
-<script>
-    var btn = new sap.ui.commons.Button({
-        text:'Press me!',
-        press: function() {
-            alert("Hello World!")
-        }
-    });
-    btn.placeAt('content');
-</script>
-
-</head>
-<body class='sapUiBody'>
-    <div id='content'></div>
-</body>
+  <head>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+	<title>UI5 MVC with XmlView</title>
+	<script id='sap-ui-bootstrap' type='text/javascript'
+		src='https://openui5.hana.ondemand.com/resources/sap-ui-core.js'
+		data-sap-ui-theme='sap_bluecrystal'
+		data-sap-ui-libs='sap.ui.commons'>
+	</script>
+	<script>
+	/*** THIS IS THE "APPLICATION" CODE ***/
+		// create some dummy JSON data
+		var data = {
+			actionName: "Say Hello"
+		};
+		// instantiate the View
+		var myView = sap.ui.xmlview(“getStarted”);
+		// create a Model and assign it to the View
+		var oModel = new sap.ui.model.json.JSONModel();
+		oModel.setData(data);
+		myView.setModel(oModel);
+		// put the View onto the screen
+		myView.placeAt('content');
+	</script>
+	</head>
+	<body class='sapUiBody'>
+		<div id="content"></div>
+	</body>
 </html>
