--- a/chart/round-rect.html
+++ b/chart/round-rect.html
@@ -8,8 +8,8 @@ var mouse = [480, 250],
     count = 0;
 
 var svg = d3.select("body").append("svg")
-    .attr("width", 100%)
-    .attr("height", 100%);
+    .attr("width", 960)
+    .attr("height", 800);
 
 var g = svg.selectAll("g")
     .data(d3.range(25))
