--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </div>
 
     <ul>
-        <li><a href="/index">Home</a>
+        <li><a href="./index.html">Home</a>
         </li>
-        <li><a href="/chart/chart-line">Line Chart</a>
+        <li><a href="./chart/chart-line.html">Line Chart</a>
         </li>
-        <li><a href="/chart/chart-bar">Bar Chart</a>
+        <li><a href="./chart/chart-bar.html">Bar Chart</a>
         </li>
-        <li><a href="/chart/round-rect">Round Rect</a>
+        <li><a href="./chart/round-rect.html">Round Rect</a>
         </li>
     </ul>
 
